<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="nobody">nobody with someone</string>
    <string name="app_name">My position</string>
    <string name="providers_needed">no way to know your position seems to be
		activated.\n\nWould you start one?
		\n\nOtherwise, you can not share your position.</string>
    <string name="progression_desc">processing …</string>
    <string name="subject">my current position</string>
    <string name="body">i am here</string>
    <string name="inside_mode">I am outdoor</string>
    <string name="outside_mode">I am indoor</string>
    <string name="location_changed">processing …</string>
    <string name="share_it">share</string>
    <string name="retry">retry</string>
    <string name="add_geocoded_location">add the geocoded address</string>
    <string name="add_nolink_location">no map link</string>
    <string name="add_urllink_location">add web map link</string>
    <string name="add_nativelink_location">add native map link</string>
    <string name="add_urllink_location_desc">fast and works everywhere</string>
    <string name="add_nativelink_location_desc">for Android, iOS or Windows Phone</string>
    <string name="add_lat_lon_location">add the latitude and longitude</string>
    <string name="add_track_location">track my position</string>
    <string name="track_location_notification">tracking is enable</string>
    <string name="track_stop_it">stop</string>
    <string name="options">options</string>
    <string name="hide">map</string>
    <string name="save">save and add this widget</string>
    <string name="select_contact">select a contact</string>
    <string name="configuration">Select a contact, and a sentence that will be displayed before the position</string>
    <string name="no_play_service">Play Service is needed</string>

    <string-array name="tips">
        <item>tip: use the mode indoor to acquire your position more easily</item>
        <item>tip: you can configure your data to share by selecting "options"</item>
        <item>tip: the application remembers your settings</item>
        <item>tip: the button "back" exits the application</item>
        <item>tip: if you want to share your location on Facebook, select "only" the shortened\'s map URL</item>
        <item>tip: don\'t hesitate to give your opinion on smaucourt@gmail.com</item>
        <item>tip: find your location may take time if you moved a long distance since your last location</item>
        <item>tip: don\'t take care, your phone will keep focus until the application finds your location</item>
        <item>tip: click on "I am indoor" to find location when GPS can not do it</item>
        <item>tip: you can now share your position more faster by installing the widget</item>
        <item>tip: the widget allows to share your position by one click</item>
    </string-array>

</resources>