<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:gravity="center">
		<WebView android:id="@+id/sharedmap_webview"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<ScrollView android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="fill_parent">
				<EditText android:id="@+id/body" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/body" />
				<CheckBox android:id="@+id/add_address_location"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:checked="true" android:text="@string/add_geocoded_location" />
				<CheckBox android:id="@+id/add_url_location"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:checked="true" android:text="@string/add_urllink_location" />
			</LinearLayout>
		</ScrollView>
	</LinearLayout>
</FrameLayout>